# qml-module-gva-gate

./: CMakeLists.txt
src/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
